--- a/contents/03.마이크로서비스아키텍처의기본/5.트랜잭션처리.md
+++ b/contents/03.마이크로서비스아키텍처의기본/5.트랜잭션처리.md
@@ -37,7 +37,7 @@ A 저장 완료, B 저장 완료, C 저장 완료, D 저장 실패
     <img src="../../images/03.마이크로서비스아키텍처의기본/local.png">
 </p>
 
-#### 1.1. 개념
+#### 2.1. 개념
 - 하나의 트랜잭션 컨택스내(begin과 commit으로 설정된 범위)에 처리 대상 리소스등을 제한하는 것.
   - begin은 트랜잭션 시작을 의미하고 commit은 트랜잭션 종료를 의미한다.
   - **하나의 Datasource**에서 발생하는 자체적인 트랜잭션만 관리.
@@ -48,15 +48,19 @@ A 저장 완료, B 저장 완료, C 저장 완료, D 저장 실패
     <img src="../../images/03.마이크로서비스아키텍처의기본/global.png">
 </p>
 
+#### 3.1. 개념
+
 - **여러개의 DtatSource** 에서 발생하는 트랜잭션을 관리.
 - 글로벌 트랜잭션은 분산 트랜잭션 구조를 사용해서 구현.
 - 투페이스 커밋을 사용.
 
-Q1. 분산 트랜잭션 구조?
+#### 3.2. Q&A
+
+##### Q1. 분산 트랜잭션 구조?
 A1. 둘 이상의 데이터 저장소(특히 데이터베이스)에서 수행되는 데이터에 대한 일련의 작업이다.일반적으로 네트워크로 연결된 별도의 노드에서 조정되지만 단일 서버의 여러 데이터베이스에 걸쳐 있을 수도 있다.
 
-Q2. 투페이스 커밋?
-A2. 여러 노드에 거쳐서 원자성 트랜잭션 커밋을 달성하기 위한 알고리즘이다.
+##### Q2. 투페이스 커밋?
+A2. 여러 노드에 거쳐서 원자성 트랜잭션 커밋을 달성하기 위한 알고리즘이다. 하지만 하나의 서비스가 장애가 있는 경우나 각각의 서비스에 동시에 Rocking이 걸리게 되면 성능의 문제가 발생하기 때문에 비효율적
 
 ex) 투페이스 커밋 예시
 결혼식에서 신랑, 신부에게 ‘결혼에 동의하십니까?’ 를 묻는다.
