fix: 참고자료 주소 수정

--- a/contents/04.마이크로서비스패턴/6.통신패턴.md
+++ b/contents/04.마이크로서비스패턴/6.통신패턴.md
@@ -134,12 +134,12 @@ ex) 메일 발신에서는 SMTP, 메일 수진에서는 POP, IMAP
 <strong><참고자료></strong>
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -  
-[사이트] <https://velog.io/@litien/%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C-%EC%84%9C%EB%B9%84%EC%8A%A4-%ED%8C%A8%ED%84%B4-%EC%99%B8%EB%B6%80-API-%ED%8C%A8%ED%84%B4>  
-[사이트] <https://medium.com/byungkyu-ju/%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%ED%8C%A8%ED%84%B4-8-8%EC%9E%A5-3cbe2bcbd24c>  
+[사이트] <https://velog.io/@injoon2019/%EC%9D%B8%ED%94%84%EB%9D%BC-%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4-%ED%8C%A8%ED%84%B4#%EB%A9%94%EC%8B%9C%EC%A7%80>  
+[사이트] <https://thebook.io/007035/ch03/03/06/02/>  
 
 ---
 
-##### 외부 API 패턴 end
+##### 통신 패턴 end
 
 [그림으로공부하는마이크로서비스구조]: http://www.yes24.com/Product/Goods/111090165?pid=123487&cosemkid=go16600967225125417&gclid=CjwKCAiAmuKbBhA2EiwAxQnt7wiLm4muh4dSpMTm6uRoMe1c8NRvwC6LLp_gwg6L5Mo9trXbgCwm7BoCbqoQAvD_BwE
 [sangcho]: https://github.com/SangchoKim
