이미지 경로 변경

--- a/contents/03.마이크로서비스아키텍처의기본/8.서비스간연계.md
+++ b/contents/03.마이크로서비스아키텍처의기본/8.서비스간연계.md
@@ -33,7 +33,7 @@
 대부분의 MSA에서는 **메세지큐를 활용한 비동기 패턴**을 사용한다.
 대표적인 메세지 큐 시스템의 예로 **아파치 Kafka**나 **Rabbit MQ**와 같은 <i>**메세지 브로커**</i>를 사용해서 메세지를 구현한다.
 <p align="center" style="margin: 0 auto">
-    <img src="../../images/08/MSA_Data_Sync_by_Messaging.png">
+    <img src="../../images/3.8/MSA_Data_Sync_by_Messaging.png">
 </p>
 
 메세지 큐의 사용 유무와 관계도를 그림으로 잘 설명 되어있는 글이니 참고 바란다.([MSA의 핵심 구성 요소 - Message Queueing](https://wonit.tistory.com/491))
