fix: 석현님 피드백 수정

--- a/contents/03.마이크로서비스아키텍처의기본/6.테이터베이스간동기화.md
+++ b/contents/03.마이크로서비스아키텍처의기본/6.테이터베이스간동기화.md
@@ -19,7 +19,8 @@
 
 #### 2.1. 개념
 
-- 마이크로서비스들끼리 이벤트를 주고 받아 특정 마이크로서비스에서의 작업이 실패하면 이전까지의 작업이 완료된 마이크서비스들에게 보상 (complemetary) 이벤트를 소싱함으로써 분산 환경에서 원자성(atomicity)을 보장하는 패턴
+- 마이크로서비스들끼리 이벤트를 주고 받아 특정 마이크로서비스에서의 작업이 실패하면 이전까지의 작업이 완료된 마이크서비스들에게 보상 (complemetary) 이벤트를 소싱함으로써 분산 환경에서 원자성(atomicity)을 보장하는 패턴  
+즉, 이러한 이벤트 소싱을 통한 정합성 보장을 최종적 (결과적) 일관성 보장 방식
 
 #### 2.2. 예시
 
@@ -89,10 +90,10 @@ A1. 장애에 의해 서비스가 데이터베이스 변경에 실패한 경우,
 
 <strong><참고자료></strong>
 
-[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -
-[사이트] <https://hyune-c.tistory.com/39>
-[사이트] <https://www.samsungsds.com/kr/insights/mas_data.html>
-[사이트] <https://learn.microsoft.com/ko-kr/azure/architecture/reference-architectures/saga/saga>
+[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -  
+[사이트] <https://hyune-c.tistory.com/39>  
+[사이트] <https://www.samsungsds.com/kr/insights/mas_data.html>  
+[사이트] <https://learn.microsoft.com/ko-kr/azure/architecture/reference-architectures/saga/saga>  
 
 ---
 
