--- a/contents/03.마이크로서비스아키텍처의기본/5.트랜잭션처리.md
+++ b/contents/03.마이크로서비스아키텍처의기본/5.트랜잭션처리.md
@@ -60,12 +60,14 @@ A 저장 완료, B 저장 완료, C 저장 완료, D 저장 실패
 A1. 둘 이상의 데이터 저장소(특히 데이터베이스)에서 수행되는 데이터에 대한 일련의 작업이다.일반적으로 네트워크로 연결된 별도의 노드에서 조정되지만 단일 서버의 여러 데이터베이스에 걸쳐 있을 수도 있다.
 
 ##### Q2. 투페이스 커밋?
-A2. 여러 노드에 거쳐서 원자성 트랜잭션 커밋을 달성하기 위한 알고리즘이다. 하지만 하나의 서비스가 장애가 있는 경우나 각각의 서비스에 동시에 Rocking이 걸리게 되면 성능의 문제가 발생하기 때문에 비효율적
+A2. 여러 노드에 거쳐서 원자성 트랜잭션 커밋을 달성하기 위한 알고리즘이다. 하지만 하나의 서비스가 장애가 있는 경우나 각각의 서비스에 동시에 Rocking이 걸리게 되면 성능의 문제가 발생하기 때문에 비효율적  
 
-ex) 투페이스 커밋 예시
-결혼식에서 신랑, 신부에게 ‘결혼에 동의하십니까?’ 를 묻는다.
-신랑, 신부 모두가 ‘예’ 라고 대답한다면 결혼이 성립된다 (커밋)
-모두가 ‘아니오’라고 대답하거나 둘중 한명이 ‘아니오’라고 대답한다면 (롤백)
+ex) 준비 (prepare) 페이즈에서 분산 트랜잭션에 참여한 서비스 (또는 데이터베이스)에 문제가 발생했다면 Blocking이 걸리지 않고 중단되며, 커밋 (commit) 단계에서 서비스나 코디네이터에 문제가 발생했을 때에 (위에 적어주신 대로) Lock을 계속 잡고 반영될 때까지 재시도  
+
+ex) 투페이스 커밋 예시  
+결혼식에서 신랑, 신부에게 ‘결혼에 동의하십니까?’ 를 묻는다.  
+신랑, 신부 모두가 ‘예’ 라고 대답한다면 결혼이 성립된다 (커밋)  
+모두가 ‘아니오’라고 대답하거나 둘중 한명이 ‘아니오’라고 대답한다면 (롤백)  
 누가 먼저 ‘예’ 라고 대답했는지는 중요하지 않다, 왜냐하면 한 사람은 결혼하고 다른 쪽은 결혼하지 않은 상태로 남을일은 없어야 하기 때문이다.
 
 ## 4. 마이크로 서비스 아키텍처에서의 트랜잭션 처리
@@ -77,12 +79,12 @@ ex) 투페이스 커밋 예시
 <strong><참고자료></strong>
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 - 
-[사이트] <https://hazelcast.com/glossary/distributed-transaction/>
-[사이트] <https://ko.wikipedia.org/wiki/%EB%B6%84%EC%82%B0_%ED%8A%B8%EB%9E%9C%EC%9E%AD%EC%85%98>
-[사이트] <https://manhyuk.github.io/transaction/>
-[사이트] <https://dongwooklee96.github.io/post/2021/03/26/two-phase-commit-%EC%9D%B4%EB%9E%80/>
-[사이트] <https://wonit.tistory.com/462>
-
+[사이트] <https://hazelcast.com/glossary/distributed-transaction/>  
+[사이트] <https://ko.wikipedia.org/wiki/%EB%B6%84%EC%82%B0_%ED%8A%B8%EB%9E%9C%EC%9E%AD%EC%85%98>  
+[사이트] <https://manhyuk.github.io/transaction/>  
+[사이트] <https://dongwooklee96.github.io/post/2021/03/26/two-phase-commit-%EC%9D%B4%EB%9E%80/>  
+[사이트] <https://wonit.tistory.com/462>  
+ 
 ---
 
 ##### 트랜잭션 처리 end
