docs: 마이크로서비스 아키텍처의 기본

--- a/contents/03.마이크로서비스아키텍처의기본/2.레이어아키텍처.md
+++ b/contents/03.마이크로서비스아키텍처의기본/2.레이어아키텍처.md
@@ -1,20 +1,56 @@
 #### [back](../../README.md) &nbsp;&nbsp; | &nbsp;&nbsp; write by [sangkyeng][sangkyeng]
 
-# 2. 레이어 아키텍처
+# 2. 레이어드 아키텍처
 
 > 이 글은 그림으로 공부하는 마이크로 서비스 구조를 참고하여 기록하였습니다.
 
 <br>
 
-## 1. 대제목1
+## 1. 레이어드 아키텍처란?
 
-## 2. 대제목2
+레이어드 아키텍처는 복잡한 코드 및 로직들을 단순화 하기 위해 계층을 나눈 것을 말하는데 보통 Presentation, Business, Persistence, DataBase Access 정도로 나뉘게 되고, 여기서 포인트는 추상적인 계층은 구체적인 계층에 의존하며, 바로 상위의 계층만 의존하는 것이라고 할 수 있습니다.
+
+<br></br>
+
+### 1.1 왜 레이어드를 나누는 것일까?
+
+관심의 범위를 줄이기 위함입니다. 관심의 범위란 각 계층의 의존하는 계층을 말합니다. 층을 무시하고 만약 Controller에서 바로 Repository를 호출한다면 조금 더 속도는 빨라질 수 있겠지만, Repository에 의존하기 때문에 추후에 서비스가 커지게 된다면, Repository의 수정은 Service뿐만 아니라 Controller까지도 영향을 미치게 됩니다.
+
+이렇게 각 계층마다 역할과 책임을 다르게 부여함으로써 유지 보수에 유리해지게 되고, 분리되지 않고 렌더링, 비즈니스 로직, 데이터 접근 로직들이 섞여 있다면 테스트 코드 작성 시, 많은 어려움이 생기기 때문에 계층을 나누는 것이 유리합니다.
+
+<br></br>
+
+### 1.2 싱크홀 안티 패턴
+
+레이어드 아키텍처에서 주의해야하는 점입니다. 레이어드를 나눈 이유는 각 계층에 다른 역할과 책임을 주기 위함인데, 만약 어떤 계층엔 역할이 거의 없고, 어떤 계층엔 엄청난 역할이 부여된다면 이것은 레이어드 아키텍처를 사용할 이유가 전혀 없습니다.
+
+그 중에서도, 요청이 Controller-Service-Repository를 지나가는데 Service에서 아무런 로직을 처리하지 않고 통과할 때, 이것을 `싱크홀 안티 패턴`이라고 부릅니다. 이런 불필요한 로직의 흐름은 최대한 자제해야 하고, 성능과 아키텍처에서 오는 트레이드 오프를 고려할 필요가 있습니다.
+
+<br></br>
+
+## 1.3 DDD에서의 레이어 아키텍처
+
+DDD(Domain-Driven Design)란 도메인 주도 설계를 말하며, 기존 데이터 중심의 접근법에서 순수하게 도메인 모델과 로직에 집중하는 방법을 말합니다. 이것은 결과적으로 도메인 별로 모듈을 나누어 서비스를 개발하는 MSA가 추구하는 방향과 비슷하다고 할 수 있습니다.
+
+DDD의 레이어 구성은 아래와 같습니다.
+
+![](/images/03.%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98%EC%9D%98%EA%B8%B0%EB%B3%B8/msa_02.png)
+
+Application layer는 Domain과 Repository를 바탕으로 실제 서비스 로직을 제공하며, Infrastructure layer는 외부와의 통신과 데이터베이스나 메시징 같은 외부 시스템과의 연동을 담당합니다.
+
+
 
 ---
 
 <strong><참고자료></strong>
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+
+[참고 사이트]<https://jojoldu.tistory.com/603>
+
+[참고 사이트]<https://incheol-jung.gitbook.io/docs/q-and-a/architecture/ddd>
+
+[참고 사이트]<https://dzone.com/articles/layered-architecture-is-good>
 
 ---
 
