--- a/contents/03.마이크로서비스아키텍처의기본/1.서비스구조.md
+++ b/contents/03.마이크로서비스아키텍처의기본/1.서비스구조.md
@@ -6,15 +6,35 @@
 
 <br>
 
-## 1. 대제목1
+## 1. 모놀리식 아키텍처, 마이크로서비스 아키텍처
 
-## 2. 대제목2
+![](/images/03.%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98%EC%9D%98%EA%B8%B0%EB%B3%B8/msa-01.png)
+
+### 모놀리식
+
+모놀리식 아키텍처는 기존에 존재하던 개발 방식입니다. 하나의 애플리케이션이 존재할 때, 모든 서비스들은 하나의 컨테이너에 모두 담겨 있고 서비스들은 DB를 공유합니다. 
+
+이런 점들 때문에 배포 과정이 단순해지는 장점이 있고, 복잡한 서비스보다는 구조가 단순하고 크지 않은 서비스를 개발할 때 용이합니다.
+
+단점도 명확한데 모든 서비스들이 하나의 컨테이너에 담겨 있기 때문에, 하나의 장애는 곧 서비스의 장애와 직결되고 배포를 하기 위해서는 모든 서비스들을 종료 후, 재배포 해야 됩니다.
+
+<br></br>
+
+### 마이크로서비스
+
+마이크로서비스 아키텍처는 단일이 아닌, 여러 개의 컨테이너가 모여 하나의 어플리케이션을 구성하는 것을 말합니다. 각 서비스는 다른 컨테이너, 다른 웹서버 내에서 구동 되므로 독립적이며, 각 서비스마다 DB를 공유하지 않고 가지고 있습니다. 하나의 컨테이너에 하나의 서비스만 담겨있는 구조를 말합니다. 
+
+이런 점들 때문에, 각 서비스에 알맞은 언어 및 프레임워크를 사용할 수 있고, 하나의 서비스의 오류가 다른 서비스 실행에 영향을 미치지 않으며, 배포를 할 때도 수정된 서비스만 재배포 하면 되는 장점을 가지고 있습니다. 
+
+하지만 구조가 복잡해서 트랜잭션 및 데이터의 정합성 관리가 힘들어지고, 서비스들간의 통신을 위해 API 호출의 수가 증가하며, 테스트를 진행하기가 쉽지 않다는 단점들이 있습니다.
 
 ---
 
 <strong><참고자료></strong>
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+
+[이미지 출처]<https://securitycream.tistory.com/10
 
 ---
 
