--- a/contents/03.마이크로서비스아키텍처의기본/3.헥사커널아키텍처.md
+++ b/contents/03.마이크로서비스아키텍처의기본/3.헥사커널아키텍처.md
@@ -1,14 +1,31 @@
 #### [back](../../README.md) &nbsp;&nbsp; | &nbsp;&nbsp; write by [sangkyeng][sangkyeng]
 
-# 3. 헥사거널 아키텍처
+# 3. 헥사고날 아키텍처
 
 > 이 글은 그림으로 공부하는 마이크로 서비스 구조를 참고하여 기록하였습니다.
 
 <br>
 
-## 1. 대제목1
+## 1. 헥사고날 아키텍처란?
 
-## 2. 대제목2
+헥사고날 아키텍처는 레이어드 아키텍처의 단점을 해결하기 위해 나온 구조입니다. 레이어드 아키텍처는 상위 레이어가 하위 레이어에 의존하는 계층 구조였는데요. 그래서 최종적으로 인프라에 종속적일 수 밖에 없고 그에 따라, 확장성이라는 면에서 단점을 가집니다.
+
+![](/images/03.%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98%EC%9D%98%EA%B8%B0%EB%B3%B8/msa_03.png)
+
+<br></br>
+
+객체지향 설계의 기본 원칙 중에 의존관계 역전 원칙이 있습니다. 의존관계 역전 원칙은 고수준 모듈이 저수준 모듈에 의존하면 안된다는 것을 말합니다. 이것을 해결하기 위해서 레이어간에 인터페이스를 두고 인터페이스가 고수준 모듈이 저수준 모듈을 의존하는 것을 해결했습니다.
+
+![](/images/03.%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98%EC%9D%98%EA%B8%B0%EB%B3%B8/msa_04.png)
+
+<br></br>
+
+이러한 방법을 통해, 헥사고날 아키텍처는 의존 역전 원칙을 통해 인프라와 애플리케이션을 분리시켜서 확장성이라는 단점을 해결했습니다. 
+
+레이어드 아키텍처의 인터페이스들과 같은 역할을 하는 것이 헥사고날 아키텍처의 포트들과 어댑터인데요. 어댑터는 외부와 상호작용을 하는 곳(Controller)라고 할 수 있고, 포트는 인터페이스와 동일하며 애플리케이션 내부에 존재하는 서비스 로직이 의존하는 인터페이스라고 할 수 있습니다.
+
+![](/images/03.%EB%A7%88%EC%9D%B4%ED%81%AC%EB%A1%9C%EC%84%9C%EB%B9%84%EC%8A%A4%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98%EC%9D%98%EA%B8%B0%EB%B3%B8/msa_05.png)
+
 
 ---
 
@@ -16,6 +33,11 @@
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
 
+[사이트]<https://coder-in-war.tistory.com/entry/SpringBoot-10-DDD-%EB%8F%84%EB%A9%94%EC%9D%B8%EC%A3%BC%EB%8F%84%EC%84%A4%EA%B3%84>
+
+[사이트]<https://huisam.tistory.com/entry/DDD>
+
+[사이트]<https://happy-coding-day.tistory.com/entry/%ED%97%A5%EC%82%AC%EA%B3%A0%EB%82%A0-%EC%95%84%ED%82%A4%ED%85%8D%EC%B2%98Hexagonal-Architecture-%EC%BD%94%EB%93%9C%EB%A1%9C-%EC%9D%B4%ED%95%B4%ED%95%B4%EB%B3%B4%EA%B8%B0-%EB%AF%B8%EC%99%84%EC%84%B1>
 ---
 
 ##### 헥사거널 아키텍처 end
