--- a/contents/07.마이크로서비스의개발과운영/2.마이크로서비스의개발과운영에필요한모범사례.md
+++ b/contents/07.마이크로서비스의개발과운영/2.마이크로서비스의개발과운영에필요한모범사례.md
@@ -120,6 +120,49 @@
 - 리포지터리인 Git을 중심으로 애플리케이션 개발은 물론 배포 및 운영 작업을 자동화하는 것. 
 - 애플리케이션 코드, 인프라, 미들웨어 구성 정보 관리, 커밋과 승인을 트리거로 해서 빌드나 배포를 실시함.
 
+#### 3.2. 특징
+
+###### 3.2.1 선언형 모델
+
+ <p align="center" style="width: 400px; margin: 0 auto">
+    <img src="../../images/07.마이크로서비스의개발과운영/ex3.png">
+</p>
+
+- 명령형 모델: 서버에서 작업을 자동화 할 떄 “ssh로 접속 → cd로 이동 → mkdir로 디렉토리 생성”
+  - 간단하지만, 단점이 존재
+    - 예외 상황 (이미 디렉토리가 존재, 권한 등) 을 모두 관리 필요 
+    - 원격 대상에 대한 지식 (OS 종류에 따른 명령어 차이)
+- 선언형 모델: 대상이 무엇이 되어야 하는지만 기술
+  - 디렉토리가 이미 존재하는지 확인하거나 OS에 따라 바뀌는 명령어를 사용자가 알아야 할 필요가 없음 -> 위 예시는  ‘/etc/some_directory’ 디렉토리가 필요한 상황
+  - 인프라를 포함한 애플리케이션 배포와 운영에 관련된 모든 것을 코드로 관리할 수 있음
+  - 코드를 이용하여 언제든 똑같은 환경을 다시 만들어내거나 부분 소실 시 복원할 수 있음
+
+###### 3.2.2 단일 진실 공급원 (SSOT)
+
+<p align="center" style="width: 400px; margin: 0 auto">
+    <img src="../../images/07.마이크로서비스의개발과운영/ex4.png">
+</p>
+
+- 단일 진실 공급원: 같은 데이터가 여러 곳에 있을 경우 문제를 일으킬 수 있으니, 한 곳에 두고 관리, 다른 곳에서 필요 시 참조만 하도록 하여 문제 해결.
+  - “Employee”와 “Employees' Skills” 테이블 존재 
+  - 각 레코드들은 Employee Name, Employee Email 정보를 중복해서 포함
+  - ‘Tom’의 이메일 주소가 변경
+  - 여러 개의 테이블의 레코드를 수정 필요 -> 하나라도 수정이 이루어지지 않을 경우 모순 상태 -> 조회하는 테이블에 따라 ‘Tom’ 이메일이 다르게 조회되기 때문에
+  - 해결 방법: “Employees’ Skills” 테이블에서 Employee Email을 제거하고 employee_name를 이용해 “Employee” 테이블을 참조 -> Employee Email 정보는 오직 “Employee”라는 하나의 테이블에서만 관리
+- 깃을 단일 진실 공급원으로 지정하고 오직 이 곳에서만 관리하도록 함.
+  - 모든 운영 활동의 시작은 깃이므로 사람 혹은 시스템 간의 혼선을 최소화 가능
+
+#### 3.3. 장점
+
+###### 3.3.1 신뢰할 수 있는 정보의 공유
+- 깃 이력을 보면 현재 상태는 물론 누가, 언제, 왜, 어느 곳을 수정했는지 쉽게 알 수 있음. 
+- 지금까지의 모든 이력을 포함하고 있어 부가적인 문서 작업을 없애는 좋은 수단. 
+
+###### 3.3.2 익숙한 절차
+- “git commit → push → merge request → review → merge”, 개발자에게 굉장히 익숙한 절차 
+- 애플리케이션 배포를 위한 별도의 절차를 만들거나 교육시킬 필요가 없음.
+- 리뷰 절차를 통해 휴먼 에러를 조기에 발견하고 책임을 나눌 수 있음.
+
 ## 4. IaC(Infrastructure as Code)
 ## 5. 변경 불가 인프라
 
@@ -129,6 +172,8 @@
 
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 - 
 [사이트] <https://digndig.kr/dailylife/2021/07/06/Daily_Whatisdevops.html>  
+[사이트] <https://www.samsungsds.com/kr/insights/gitops.html/>  
+
  
 ---
 
