docs: 7.2 마이크로서비스의 개발과 운영에 필요한 모범사례 완료

--- a/contents/07.마이크로서비스의개발과운영/2.마이크로서비스의개발과운영에필요한모범사례.md
+++ b/contents/07.마이크로서비스의개발과운영/2.마이크로서비스의개발과운영에필요한모범사례.md
@@ -164,7 +164,67 @@
 - 리뷰 절차를 통해 휴먼 에러를 조기에 발견하고 책임을 나눌 수 있음.
 
 ## 4. IaC(Infrastructure as Code)
+
+#### 4.1. 개념
+
+- 수동 프로세스가 아닌 코드를 통해 인프라를 관리하고 프로비저닝하는 것
+
+#### 4.2. 특징
+
+- 구성 사양을 코드화하고 문서화함으로써 인프라 구성 관리를 지원
+- 애플리케이션을 개발하거나 배포할 때마다 개발자가 직접 서버, 운영 체제, 스토리지, 기타 인프라 구성 요소를 수동으로 프로비저닝하고 관리할 필요가 없어짐.
+- 인프라를 코드화하여 템플릿을 만들고 프로비저닝할 때 이 템플릿을 사용 -> 수동 or 자동으로 진행 가능 
+
+#### 4.3. 장점
+
+- 비용 절감
+- 휴먼에 의한 오류 감소
+- 민첩성, 유연성, 확장성
+- 인프라 일관성 향상
 ## 5. 변경 불가 인프라
+
+#### 5.1. 개념
+
+- IaC와 함께 적용되는 기법.
+- 서버를 변경 불가능한 것으로 취급.
+#### 5.2. 특징
+
+- 한번 구축한 인프라는 변경 X
+- 일괄 적용이나 파라미터 변경이 필요한 경우에는 해당 변경을 이미 적용한 **새로운 인프라를 배포**
+- 서비스 운영환경을 호스트 OS와 분리한 후 이미지로 생성하여 서버에 배포하여 실행 (ex 도커(?))
+
+#### 5.3. 장점
+
+- 인프라 관리의 자동화 및 효율화 
+- 품질 개선
+- 인스턴스 고유의 오류를 최소화 
+- 인프라 구성 표준화
+
+#### 5.4. 가변 vs 불변 운영방법 비교
+
+###### 5.4.1 가변 운영방법
+- 마치 고급 도자기 찻잔에 비유 -> 애지중지 관리 필요, 깨지면 모든 것이 끝
+- **예시** 
+  1. 아파치 웹 서버 
+    - 웹 서버 소스를 다운 -> 컴파일 -> 웹 서버 구성파일 설정 -> 정상 동작하는 지 확인 
+  2. 오픈을 하기 전 
+    - 갑자기 취약점 테스트에서 문제가 발생 -> 관련 문제 수정 -> 정상 동작 확인
+  3. 임시 오픈 후 
+    - 사용자가 늘어남 -> 특정 시간에 응답시간이 느려지거나 반응이 없는 경우 발생 -> 아파치 웹 서버의 프로세스나 스레드 값들을 운영수준으로 튜닝 
+  4. 정식 오픈 후 
+    - 사용자 대량 접속 -> 서버를 20대까지 확장 필요 -> 과거에 있던 히스토리 파악(보안 취약점 조치 및 튜닝) -> 20번 반복 -> 서버들의 상태가 다르게 될 확률 존재  
+###### 5.4.2 불변 운영방법
+- 일회용 종이컵으로 비유 -> 한번 쓰고 버리면 되고, 구매하는데도 큰 부담이 없음
+- **예시** 
+  1. 아파치 웹 서버 
+    - 웹 서버 **이미지**를 컨테이너로 실행 -> 설치 완료 
+    - 스케일 아웃은 기존보다 훨씬 편리 
+  2. 오픈을 하기 전
+    - 취약점 테스트에서 문제가 발생 -> 관련 문제 수정 -> 취약점 조치가 완료된 새로운 서버 다시 빌드 -> 기존 쓰고 있는 서버는 자동 폐기
+  3. 임시 오픈 후 
+    - 위와 같음 
+  4. 정식 오픈 후 
+    - 사용자 대량 접속 -> 서버를 20대까지 확장 필요 -> 완료된 최종 이미지 20번 실행 
 
 ---
 
@@ -173,8 +233,8 @@
 [책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 - 
 [사이트] <https://digndig.kr/dailylife/2021/07/06/Daily_Whatisdevops.html>  
 [사이트] <https://www.samsungsds.com/kr/insights/gitops.html/>  
+[사이트] <https://www.openmaru.io/%EB%B6%88%EB%B3%80%EC%9D%98-%EC%9D%B8%ED%94%84%EB%9D%BC%EC%8A%A4%ED%8A%B8%EB%9F%AD%EC%B2%98-aci/>  
 
- 
 ---
 
 ##### 마이크로서비스의 개발과 운영에 필요한 모범 사례 end
