--- a/contents/03.마이크로서비스아키텍처의기본/8.서비스간연계.md
+++ b/contents/03.마이크로서비스아키텍처의기본/8.서비스간연계.md
@@ -18,6 +18,8 @@
  **Q2) 확장성 문제**
  
 > A2) 정해진 json 포멧을 지켜야함. 이것을 지키지 못하면 파싱하지 못하는 경우가 있고, 데이터 변경이 이루어질 때마다 rest api는 계속 수정이 되이어야함.(확장성에 영향)
+> 
+> 보충) 해당 책에서는 나오지 않았지만 Protocol Buffers나 이를 내부적으로 활용하는 grpc라는 통신 방식도있다.
 
 <br/>
 
@@ -31,6 +33,11 @@
   - 비동기형 통신은 확장성을 요하는 경우 적합.
 
 대부분의 MSA에서는 **메세지큐를 활용한 비동기 패턴**을 사용한다.
+
+### ***왜 사용하할까?***
+MSA나 기타 분산 시스템 환경에서 데이터 일관성을 보장하려고 하다보면 전체적인 서비스 가용성이 무너져 사실상 위와 같은 시스템.
+아키텍처를 선택하는 의미가 퇴색되기 때문(XA Transcation 내용을 다시 생각해보자)
+
 대표적인 메세지 큐 시스템의 예로 **아파치 Kafka**나 **Rabbit MQ**와 같은 <i>**메세지 브로커**</i>를 사용해서 메세지를 구현한다.
 <p align="center" style="margin: 0 auto">
     <img src="../../images/3.8/MSA_Data_Sync_by_Messaging.png">
@@ -43,6 +50,7 @@
 
 ### [참고]
 - [MQTT와 REST 아키텍처링](https://www.joinc.co.kr/w/man/12/MQTT/Rest)
+- [CAP 이론이나 PACELC 이론](http://happinessoncode.com/2017/07/29/cap-theorem-and-pacelc-theorem/)
 ---
 
 <strong><참고자료></strong>
