--- a/contents/04.마이크로서비스패턴/7.배포패턴.md
+++ b/contents/04.마이크로서비스패턴/7.배포패턴.md
@@ -181,6 +181,9 @@ MSA에서는 가능한 최신 클라우드 기술을 도입해야한다
     
     예)VMware Workstation, VMware Player, VirtualBox, Parallels Desktop for Mac
     
+<br/>
+
+보충) _참고로 Native 방식이 Hosted 방식에 비해 컴퓨팅 리소스에 대한 가상화 오버헤드가 적어 더 많은 리소스와 성능을 누릴 수 있지만 반대로 Hosted 방식처럼 OS를 통해 리소스에 접근 가능한 API를 제공 받지 못하기 때문에, 구현 난이도가 높고 호환성이 낮아 지원하는 OS의 종류가 Hosted 방식에 비해 상대적으로 적다._
 
 ---
 
@@ -201,6 +204,8 @@ MSA에서는 가능한 최신 클라우드 기술을 도입해야한다
 단점
 
 - 쉽지않은 컨테이너 기반 구축 및 운영
+
+보충) _구축 비용은 클 수 있을 것 같지만 운영 난이도나 리소스는 컨테이너 기반의 서비스가 덜 들어 갈듯 하다._
 
 ---
 
