--- a/contents/03.마이크로서비스아키텍처의기본/9.서비스화진행방법.md
+++ b/contents/03.마이크로서비스아키텍처의기본/9.서비스화진행방법.md
@@ -77,7 +77,7 @@ ex) 온라인 쇼핑의 장바구니에서 여러 방면에서 상태 유지시 
 
 <strong><참고자료></strong>
 
-[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -
 
 ---
 
