--- a/contents/04.마이크로서비스패턴/7.배포패턴.md
+++ b/contents/04.마이크로서비스패턴/7.배포패턴.md
@@ -241,7 +241,7 @@ HTTP를 이용하는 웹앱이나 모바일 앱에서 이벤트나 호출을 받
 
 <strong><참고자료></strong>
 
-[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -
 
 ---
 
