--- a/contents/04.마이크로서비스패턴/8.관찰가능성패턴.md
+++ b/contents/04.마이크로서비스패턴/8.관찰가능성패턴.md
@@ -95,7 +95,7 @@ Q) health check ? fetch시 option status?
 
 <strong><참고자료></strong>
 
-[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -
 
 ---
 
