--- a/contents/04.마이크로서비스패턴/9.리팩터링패턴.md
+++ b/contents/04.마이크로서비스패턴/9.리팩터링패턴.md
@@ -74,7 +74,7 @@ Azure의 손상 방지 계층 패턴 솔루션 아키텍쳐
 
 <strong><참고자료></strong>
 
-[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 유인동 지음 -
+[책] [#그림으로 공부하는 마이크로 서비스 구조][그림으로공부하는마이크로서비스구조] - 다루사와 히로유키 지음 -
 
 ---
 
