릴리스,배포의 관계

--- a/contents/07.마이크로서비스의개발과운영/4.릴리스관리.md
+++ b/contents/07.마이크로서비스의개발과운영/4.릴리스관리.md
@@ -10,6 +10,10 @@
 
 릴리스 관리는 안전하고 신속하게 서비스를 릴리스하려면 서비스 전체의 일관성을 유지하면서 릴리스해야 한다.
 
+### 릴리즈 vs 배포
+- 릴리즈: 제품의 버전에 따른 사용자/ 외부 환경. 패키징된 단위의 제품
+- 배포: 릴리즈된 환경을 외부로 배포
+
 ## 모노리스
 
 단위 테스트 → 빌드 → 배포(개발) → 통합 테스트 → 배포(스테이징) → 성능 테스트 → 배포(운영)
